@@ -26,7 +26,7 @@ remove = Test::DZil
 
 [Prereqs]
 Dist::Zilla = 6.000
-Alien::Build = 0.19
+Alien::Build = 0.25
 
 [Author::Plicease::Upload]
 cpan = 1
